basic set-up of hmtl and css grid completed - logic for animation module and math up next

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
         <!-- Place favicon.ico in the root directory -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
         <link rel="stylesheet" href="css/app.css">
         <script src="app/js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
@@ -16,7 +17,7 @@
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-
+        <!--navigation bar-->
         <nav class="section group">
             <ul class="col span_2_of_2 navigation_bar">
                 <li>logo</li>
@@ -24,9 +25,11 @@
         </nav>
 
         <section class="container">
+            <!--status bar-->
             <div class="col span_2_of_2 status_bar">
                 <h1>Status:<span> Withdrawn</span></h1>
             </div>
+            <!--property-->
             <div class="col span_2_of_2 property">
                 <h1>The property</h1>
                 <div class="col span_1_of_2 infoGroup1">
@@ -40,11 +43,29 @@
                     <span class="extras"> View Extras Included </span>
                 </div>
             </div>
+
+            <!--buyer's details-->
+            <div class="col span_2_of_2 buyers_details">
+                <h1>Buyer's details</h1>
+                <a href="#" class="show_hide">HIDE<span>^</span></a>
+
+                <!--hidden content-->
+                <div class="col span_2_of_2 hide">Hidden Content!!!</div>
+
+            </div>
         </section>
 
-        <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-        <script>window.jQuery || document.write('<script src="app/js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
+
+
+
+
+
+
+
+
+
         <script src="app/js/plugins.js"></script>
+
         <script src="app/js/app.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
