html structure of reopen negotiations added, footer markup added

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
         <section class="container">
             <!--status bar-->
             <div class="col span_2_of_2 status_bar">
-                <h1>Status:<span> Withdrawn</span></h1>
+                <h2>Status:<span> Withdrawn</span></h2>
             </div>
             <!--property-->
             <div class="col span_2_of_2 property">
-                <h1>The property</h1>
+                <h2>The property</h2>
                 <div class="col span_1_of_2 infoGroup1">
                     <img src="app/img/house.png" alt="house">
                     <p>Eddington House, 16 Wigginton Road,
@@ -46,20 +46,50 @@
 
             <!--buyer's details-->
             <div class="col span_2_of_2 buyers_details">
-                <h1>Buyer's details</h1>
+                <h2>Buyer's details</h2>
                 <a href="#" class="show_hide">HIDE<span>^</span></a>
 
                 <!--hidden content-->
                 <div class="col span_2_of_2 hide">Hidden Content!!!</div>
 
             </div>
+
+            <!--buyer's offers-->
+            <div class="col span_1_of_2 buyers_offers"></div>
+
+            <!--your response-->
+            <div class="col span_1_of_2 your_response"></div>
+
+            <!--reopen negotiations-->
+            <div class="col span_2_of_2 reopen_negotiations">
+                <h2>Re-open negotiations</h2>
+                <p>Would you like your Expert, Robert White, to negotiate on your behalf? It’s completely free! <a href="#" class="negotiate_btn">NEGOTIATE FOR ME</a> </p>
+
+                <label for="offerNum">Enter an offer you would be willing to accept:</label>
+                <input id="offerNum" type="number" name="offerNum" value="180000">
+
+                <a href="#">ADD COMMENTS</a>
+
+            </div>
+
         </section>
 
-
-
-
-
-
+        <footer class="section group">
+             <ul class="col span_1_of_2 company_info">
+                 <li><a href="#">CONTACT US|</a></li>
+                 <li><a href="#">FAQ|</a></li>
+                 <li><a href="#">JOIN THE TEAM|</a></li>
+                 <li><a href="#">ABOUT US|</a></li>
+                 <li><a href="#">LIVE HELP</a></li>
+             </ul>
+            <ul class="col span_1_of_2 social_media">
+                <li><a href="#">twitter</a></li>
+                <li><a href="#">facebook</a></li>
+                <li><a href="#">youtube</a></li>
+                <li><a href="#">pinterest</a></li>
+                <li><a href="#">google_plus</a></li>
+            </ul>
+        </footer>
 
 
 
