--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
                 <!--form-->
                 <form>
-                    <label for="offerNum">Enter an offer you would be willing to accept:</label>
+                    <label id="offerLabel" for="offerNum">Enter an offer you would be willing to accept:<span id="error1"></span></label>
                     <input id="offerNum" type="number" name="offerNum" placeholder="180000" autofocus />
 
                     <a href="#">ADD COMMENTS</a>
